  * make font generation less noisy, only mention that it may take
    some time. (Closes: #333745)
  * include the postrm/postinst scripts from lmodern, which are prototypes
    of the Font Package part of the TeX Policy.
  * Install the afm files also to /usr/share/texmf and only make links
    in /usr/X11R6
  * Install defoma hints file

 -- Norbert Preining <preining@logic.at>  Sat, 15 Oct 2005 19:19:44 +0200

cm-super (0.3.3-1) unstable; urgency=low

  * Suggest pfb2t1c2pfb for binary conversion program. In the postinst
    script test first on the t1c2pfb binary and if not present use the
    perl script.
  * changed README.debian, add entry on variants of sharp-s, TODO, copyright
  * fixed old FSF address in copyright file
  * add cm-super-x11 package to make the fonts available from X11
  * removed magic perl header from t1c2pfb.pl
  * created a minimal man page for t1c2pfb (perl script installed in /usr/bin)
  * added lintian overrides
    cm-super: for the md5sum check
    cm-super source: old debian/postinst script is buggy, it is replaced
    cm-super-x11: install into X11R6
  * changed postinst, postrm to work with tetex2
  * Hack around that the pfb files are generated at install time and the
    md5sums are wrong if we ship empty files instead.
  * bump Standards Version to 3.6.2.1 and debhelper compat to 4 
  * add Replaces for pts-tetex-cm-super
  * install map and enc files in the correct locations
  * package renamed and new maintainer

 -- Norbert Preining <preining@logic.at>  Sun,  2 Oct 2005 14:06:00 +0200

pts-tetex-cm-super (0.3.3-4) unstable; urgency=low

  * Full pdftex, dvips and dvipdfm support.

 -- Szabó Péter <pts@fazekas.hu>  Sun, 30 Mar 2003 14:53:28 +0200

pts-tetex-cm-super (0.3.3-3) unstable; urgency=low

  * debian/control updated
  * debain/postinst calls /etc/texmf/dvips/updmap

 -- Szabó Péter <pts@fazekas.hu>  Sun, 30 Mar 2003 14:06:14 +0200

pts-tetex-cm-super (0.3.3-2) unstable; urgency=low

  * Added t2c2pfb.pl
