@@ -87,6 +87,7 @@ case "$1" in
     ;;
 esac
 
+#DEBHELPER#
+
 exit 0
 
-#DEBHELPER#
