@@ -47,13 +47,14 @@ install-stamp-cmsuperx11: build-stamp
 	dh_testdir
 	dh_testroot
 	dh_installdirs
-	cd pfb ; for i in *1000.pfb *10.pfb ; do \
-		echo "usr/share/texmf/fonts/type1/public/cm-super/$$i usr/X11R6/lib/X11/fonts/Type1/$$i" >> debian/$(x11package).links
+	for i in *1000.pfb *10.pfb ; do \
+		bn=`basename $$i` ; \
+		echo "usr/share/texmf/fonts/type1/public/cm-super/$$bn usr/X11R6/lib/X11/fonts/Type1/$$bn" >> debian/$(x11package).links ; \
 	done
 	for i in afm/*1000.afm.gz afm/*10.afm.gz ; do \
 		bn=`basename $$i .gz` ; \
 		gunzip -c $$i > debian/$(x11package)/usr/share/texmf/fonts/afm/public/cm-super/$$bn ; \
-		echo "usr/share/texmf/fonts/afm/public/cm-super/$$bn usr/X11R6/lib/X11/fonts/Type1/$$bn" >> debian/$(x11package).links
+		echo "usr/share/texmf/fonts/afm/public/cm-super/$$bn usr/X11R6/lib/X11/fonts/Type1/$$bn" >> debian/$(x11package).links ; \
 	done
 	# install the override file for lintian
 	cp debian/$(x11package).override debian/$(x11package)/usr/share/lintian/overrides/$(x11package)
